# data_structures_algorithms

./: .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp  q.cpp  sparse-table-problems.md  sparse-table.cpp  st.cpp
atcoder/abc065/: b-built.cpp
codeforces/contests/1027/: d.mouse-hunt.cpp
codeforces/contests/1143/: c.queen.cpp
codeforces/contests/150/: d.quantity-of-strings.cpp
codeforces/contests/152/: c.pocket.book.cpp
codeforces/contests/1559/: d1.mocha-and-diana.cpp
codeforces/contests/1593/: e.gardener-and-tree.cpp
codeforces/contests/1651/: d.nearest-excluded-points.cpp
codeforces/contests/17/: b.hierarchy.cpp
codeforces/contests/1714/: g.path-prefixes.cpp
codeforces/contests/20/: c.dijkstra.cpp
codeforces/contests/2051/: a.preparing_for_the_olympiad.cpp  d.counting_pairs.cpp
codeforces/contests/2127/: c.cpp
codeforces/contests/2154/: a.notelock.cpp  b.make-it-zigzag.cpp  c.cpp
codeforces/contests/2156/: a.cpp  b.cpp
codeforces/contests/2167/: a.square.cpp  b.your-name.cpp  c.isamatdin-and-his-magic-wand.cpp  d.yet-another-array-problem.cpp
codeforces/contests/248/: b.kuriyama-mirais-stones.cpp
codeforces/contests/369/: c.valera-and-elections.cpp
codeforces/contests/427/: C.checkposts.cpp
codeforces/contests/510/: b.fox-and-two-dots.cpp  (+1 more)
cses/dp/: book-shop.cpp  coin-combinations.I.cpp  dice-combinations.cpp  grid-paths-1.cpp  money-sums.cpp  money-sums.md  rectangle-cutting.cpp  two-sets-2.cpp  two-sets-2.md
cses/graph/: building-roads.cpp  flight-discount.cpp  game-routes.cpp  labyrinth.cpp  longest-flight-route.cpp  road-construction.cpp
cses/tree/: subordinates.cpp  tree-diameter.cpp
leetcode/: 3412.find-mirror-score-of-a-string.cpp  3413.maximum-coins-from-k-consecutive-bags.cpp  3531.count-covered-buildings.cpp  3598.Longest Common Prefix Between Adjacent Strings After Removals.cpp  robber-house-1.cpp  robber-house-1.md
number_theory/: factors_of_number.cpp  fast_exponentiation.cpp  n_c_r.cpp  prime_factorization.cpp
spoj/: adacycle.cpp  costly-chess.cpp  dark-roads.cpp
templates/: debugging.hpp  dsu.cpp  dsu.hpp  math.hpp  scc.cpp  sparse_table.hpp
templates/trie/: Trie.hpp
topics/: Trie.cpp
trees/: dfs-levels-of-node.cpp
(+16 files in other folders)
